y.output
Nonterminals useless in grammar

   vec


Terminals unused in grammar

   ARR
   print
   '<'
   '>'


Rules useless in grammar

  154 vec: tip ID '[' INTNR ']'


Rules useless in parser due to conflicts

   91 instructiune_bloc: %empty


Stare 254 conflicte: 14 shift/reduce
Stare 255 conflicte: 14 shift/reduce
Stare 291 conflicte: 14 shift/reduce
Stare 292 conflicte: 14 shift/reduce


Gramatică

    0 $accept: start $end

    1 start: start global
    2      | start main
    3      | %empty

    4 global: declaratie_g ';'
    5       | asignare ';'
    6       | declaratie_functie
    7       | structura
    8       | EVAL '(' parametru_eval ')' '{' bloc_eval '}'

    9 parametru_eval: INT ID

   10 bloc_eval: declaratii_locale ';'

   11 structura: STRUCT ID '{' bloc_structura '}'

   12 bloc_structura: bloc_structura declaratie_structura ';'
   13               | bloc_structura declaratie_functie
   14               | %empty

   15 expresie_eval: expresie_eval '+' expresie_eval
   16              | expresie_eval '-' expresie_eval
   17              | expresie_eval '*' expresie_eval
   18              | expresie_eval '/' expresie_eval
   19              | '(' expresie_eval ')'
   20              | INTNR
   21              | ID

   22 expresie_matematica: expresie_matematica '+' expresie_matematica
   23                    | expresie_matematica '-' expresie_matematica
   24                    | expresie_matematica '*' expresie_matematica
   25                    | expresie_matematica '/' expresie_matematica
   26                    | '(' expresie_matematica ')'
   27                    | nr
   28                    | ID

   29 expresie_bool: NOT ID
   30              | BOOLEAN
   31              | NOT BOOLEAN
   32              | expresie AND expresie
   33              | expresie OR expresie
   34              | '(' expresie_bool ')'
   35              | expresie GE expresie
   36              | expresie LE expresie
   37              | expresie EQ expresie
   38              | expresie NE expresie
   39              | expresie GT expresie
   40              | expresie LT expresie

   41 expresie_string: STRINGVAL '+' ID
   42                | STRINGVAL '+' STRINGVAL

   43 expresie: expresie_matematica
   44         | expresie_bool
   45         | expresie_string

   46 declaratie_structura: tip ID '[' INTNR ']'
   47                     | tip ID
   48                     | tip ID '=' nr
   49                     | tip ID '=' ID
   50                     | tip ID '=' BOOLEAN
   51                     | tip ID '=' STRINGVAL
   52                     | STRUCT ID ID
   53                     | constant ID '=' nr
   54                     | constant ID '=' ID
   55                     | constant ID '=' STRINGVAL
   56                     | constant ID '=' BOOLEAN

   57 main: START_MAIN bloc_main END_MAIN

   58 bloc_main: bloc_main cod_main
   59          | %empty

   60 cod_main: declaratie_main ';'
   61         | asignare ';'
   62         | statements
   63         | apel
   64         | apel_eval

   65 apel: ID '(' parametri_apel ')' ';'

   66 apel_eval: EVAL '(' parametri_eval_apel ')' ';'

   67 parametri_eval_apel: expresie_eval

   68 parametri_apel: parametru_apel
   69               | parametri_apel '#' parametru_apel

   70 parametru_apel: expresie
   71               | '_' ID '(' ')'
   72               | %empty

   73 statements: ifstatement
   74           | forstatement
   75           | whilestatement

   76 ifstatement: IF '(' expresie_bool ')' '{' cod_bloc '}'
   77            | IF '(' expresie_bool ')' '{' cod_bloc '}' ELSE '{' cod_bloc '}'

   78 forstatement: FOR '(' asignare_for ',' expresie_bool ',' operatie ')' '{' cod_bloc '}'

   79 whilestatement: WHILE '(' expresie_bool ')' '{' cod_bloc '}'

   80 asignare_for: declaratii_locale
   81             | asignare

   82 operatie: ID '+' '+'
   83         | ID '-' '-'
   84         | ID '=' ID '+' ID

   85 cod_bloc: cod_bloc instructiune_bloc
   86         | %empty

   87 instructiune_bloc: declaratii_locale ';'
   88                  | statements
   89                  | apel
   90                  | asignare ';'
   91                  | %empty

   92 declaratii_locale: tip ID '[' INTNR ']'
   93                  | tip ID
   94                  | tip ID '=' nr
   95                  | tip ID '=' ID
   96                  | tip ID '=' BOOLEAN
   97                  | tip ID '=' STRINGVAL
   98                  | STRUCT ID ID
   99                  | constant ID '=' nr
  100                  | constant ID '=' ID
  101                  | constant ID '=' STRINGVAL
  102                  | constant ID '=' BOOLEAN

  103 declaratie_g: tip ID '[' INTNR ']'
  104             | tip ID
  105             | tip ID '=' nr
  106             | tip ID '=' ID
  107             | tip ID '=' BOOLEAN
  108             | tip ID '=' STRINGVAL
  109             | STRUCT ID ID
  110             | constant ID '=' nr
  111             | constant ID '=' ID
  112             | constant ID '=' STRINGVAL
  113             | constant ID '=' BOOLEAN

  114 declaratie_main: tip ID
  115                | tip ID '=' nr
  116                | tip ID '=' ID
  117                | tip ID '=' BOOLEAN
  118                | tip ID '=' STRINGVAL
  119                | tip ID '[' INTNR ']'
  120                | STRUCT ID ID
  121                | constant ID '=' nr
  122                | constant ID '=' ID
  123                | constant ID '=' STRINGVAL
  124                | constant ID '=' BOOLEAN

  125 declaratie_functie: tip ID '(' params ')' '{' bloc_functie '}'
  126                   | tip ID '(' ')' '{' bloc_functie '}'

  127 params: param
  128       | params '#' param

  129 param: tip ID

  130 bloc_functie: bloc_functie cod_functie
  131             | %empty

  132 cod_functie: declaratie_var_f ';'
  133            | asignare ';'

  134 declaratie_var_f: tip ID
  135                 | tip ID '=' nr
  136                 | tip ID '=' ID
  137                 | tip ID '=' BOOLEAN
  138                 | tip ID '=' STRINGVAL
  139                 | STRUCT ID ID

  140 asignare: ID '=' expresie
  141         | asignare_structura

  142 asignare_structura: ID '.' ID '=' expresie

  143 constant: CONST tip

  144 tip: INT
  145    | FLOAT
  146    | BOOL
  147    | DOUBLE
  148    | CHAR
  149    | VOID
  150    | STRING

  151 nr: INTNR
  152   | FLOATNR
  153   | DOUBLENR


Terminale, cu reguli acolo unde acestea apar

$end (0) 0
'#' (35) 69 128
'(' (40) 8 19 26 34 65 66 71 76 77 78 79 125 126
')' (41) 8 19 26 34 65 66 71 76 77 78 79 125 126
'*' (42) 17 24
'+' (43) 15 22 41 42 82 84
',' (44) 78
'-' (45) 16 23 83
'.' (46) 142
'/' (47) 18 25
';' (59) 4 5 10 12 60 61 65 66 87 90 132 133
'<' (60)
'=' (61) 48 49 50 51 53 54 55 56 84 94 95 96 97 99 100 101 102 105
    106 107 108 110 111 112 113 115 116 117 118 121 122 123 124 135
    136 137 138 140 142
'>' (62)
'[' (91) 46 92 103 119
']' (93) 46 92 103 119
'_' (95) 71
'{' (123) 8 11 76 77 78 79 125 126
'}' (125) 8 11 76 77 78 79 125 126
error (256)
ID (258) 9 11 21 28 29 41 46 47 48 49 50 51 52 53 54 55 56 65 71 82
    83 84 92 93 94 95 96 97 98 99 100 101 102 103 104 105 106 107 108
    109 110 111 112 113 114 115 116 117 118 119 120 121 122 123 124
    125 126 129 134 135 136 137 138 139 140 142
INTNR (259) 20 46 92 103 119 151
ARR (260)
FLOATNR (261) 152
DOUBLENR (262) 153
BOOLEAN (263) 30 31 50 56 96 102 107 113 117 124 137
AND (264) 32
OR (265) 33
NOT (266) 29 31
EVAL (267) 8 66
INT (268) 9 144
FLOAT (269) 145
BOOL (270) 146
DOUBLE (271) 147
CHAR (272) 148
VOID (273) 149
CONST (274) 143
STRING (275) 150
STRINGVAL (276) 41 42 51 55 97 101 108 112 118 123 138
FOR (277) 78
WHILE (278) 79
STRUCT (279) 11 52 98 109 120 139
IF (280) 76 77
ELSE (281) 77
print (282)
START_MAIN (283) 57
END_MAIN (284) 57
LE (285) 36
GE (286) 35
EQ (287) 37
NE (288) 38
LT (289) 40
GT (290) 39


Non-terminale, cu reguli acolo unde acestea apar

$accept (54)
    pe stânga: 0
start (55)
    pe stânga: 1 2 3, pe dreapta: 0 1 2
global (56)
    pe stânga: 4 5 6 7 8, pe dreapta: 1
parametru_eval (57)
    pe stânga: 9, pe dreapta: 8
bloc_eval (58)
    pe stânga: 10, pe dreapta: 8
structura (59)
    pe stânga: 11, pe dreapta: 7
bloc_structura (60)
    pe stânga: 12 13 14, pe dreapta: 11 12 13
expresie_eval (61)
    pe stânga: 15 16 17 18 19 20 21, pe dreapta: 15 16 17 18 19 67
expresie_matematica (62)
    pe stânga: 22 23 24 25 26 27 28, pe dreapta: 22 23 24 25 26 43
expresie_bool (63)
    pe stânga: 29 30 31 32 33 34 35 36 37 38 39 40, pe dreapta: 34
    44 76 77 78 79
expresie_string (64)
    pe stânga: 41 42, pe dreapta: 45
expresie (65)
    pe stânga: 43 44 45, pe dreapta: 32 33 35 36 37 38 39 40 70 140
    142
declaratie_structura (66)
    pe stânga: 46 47 48 49 50 51 52 53 54 55 56, pe dreapta: 12
main (67)
    pe stânga: 57, pe dreapta: 2
bloc_main (68)
    pe stânga: 58 59, pe dreapta: 57 58
cod_main (69)
    pe stânga: 60 61 62 63 64, pe dreapta: 58
apel (70)
    pe stânga: 65, pe dreapta: 63 89
apel_eval (71)
    pe stânga: 66, pe dreapta: 64
parametri_eval_apel (72)
    pe stânga: 67, pe dreapta: 66
parametri_apel (73)
    pe stânga: 68 69, pe dreapta: 65 69
parametru_apel (74)
    pe stânga: 70 71 72, pe dreapta: 68 69
statements (75)
    pe stânga: 73 74 75, pe dreapta: 62 88
ifstatement (76)
    pe stânga: 76 77, pe dreapta: 73
forstatement (77)
    pe stânga: 78, pe dreapta: 74
whilestatement (78)
    pe stânga: 79, pe dreapta: 75
asignare_for (79)
    pe stânga: 80 81, pe dreapta: 78
operatie (80)
    pe stânga: 82 83 84, pe dreapta: 78
cod_bloc (81)
    pe stânga: 85 86, pe dreapta: 76 77 78 79 85
instructiune_bloc (82)
    pe stânga: 87 88 89 90 91, pe dreapta: 85
declaratii_locale (83)
    pe stânga: 92 93 94 95 96 97 98 99 100 101 102, pe dreapta: 10
    80 87
declaratie_g (84)
    pe stânga: 103 104 105 106 107 108 109 110 111 112 113, pe dreapta:
    4
declaratie_main (85)
    pe stânga: 114 115 116 117 118 119 120 121 122 123 124, pe dreapta:
    60
declaratie_functie (86)
    pe stânga: 125 126, pe dreapta: 6 13
params (87)
    pe stânga: 127 128, pe dreapta: 125 128
param (88)
    pe stânga: 129, pe dreapta: 127 128
bloc_functie (89)
    pe stânga: 130 131, pe dreapta: 125 126 130
cod_functie (90)
    pe stânga: 132 133, pe dreapta: 130
declaratie_var_f (91)
    pe stânga: 134 135 136 137 138 139, pe dreapta: 132
asignare (92)
    pe stânga: 140 141, pe dreapta: 5 61 81 90 133
asignare_structura (93)
    pe stânga: 142, pe dreapta: 141
constant (94)
    pe stânga: 143, pe dreapta: 53 54 55 56 99 100 101 102 110 111
    112 113 121 122 123 124
tip (95)
    pe stânga: 144 145 146 147 148 149 150, pe dreapta: 46 47 48 49
    50 51 92 93 94 95 96 97 103 104 105 106 107 108 114 115 116 117
    118 119 125 126 129 134 135 136 137 138 143
nr (96)
    pe stânga: 151 152 153, pe dreapta: 27 48 53 94 99 105 110 115
    121 135


State 0

    0 $accept: . start $end
    1 start: . start global
    2      | . start main
    3      | . %empty

    $implicit  reduce folosind regula 3 (start)

    start  mergi în starea 1


State 1

    0 $accept: start . $end
    1 start: start . global
    2      | start . main
    4 global: . declaratie_g ';'
    5       | . asignare ';'
    6       | . declaratie_functie
    7       | . structura
    8       | . EVAL '(' parametru_eval ')' '{' bloc_eval '}'
   11 structura: . STRUCT ID '{' bloc_structura '}'
   57 main: . START_MAIN bloc_main END_MAIN
  103 declaratie_g: . tip ID '[' INTNR ']'
  104             | . tip ID
  105             | . tip ID '=' nr
  106             | . tip ID '=' ID
  107             | . tip ID '=' BOOLEAN
  108             | . tip ID '=' STRINGVAL
  109             | . STRUCT ID ID
  110             | . constant ID '=' nr
  111             | . constant ID '=' ID
  112             | . constant ID '=' STRINGVAL
  113             | . constant ID '=' BOOLEAN
  125 declaratie_functie: . tip ID '(' params ')' '{' bloc_functie '}'
  126                   | . tip ID '(' ')' '{' bloc_functie '}'
  140 asignare: . ID '=' expresie
  141         | . asignare_structura
  142 asignare_structura: . ID '.' ID '=' expresie
  143 constant: . CONST tip
  144 tip: . INT
  145    | . FLOAT
  146    | . BOOL
  147    | . DOUBLE
  148    | . CHAR
  149    | . VOID
  150    | . STRING

    $end        shift, şi mergi în starea 2
    ID          shift, şi mergi în starea 3
    EVAL        shift, şi mergi în starea 4
    INT         shift, şi mergi în starea 5
    FLOAT       shift, şi mergi în starea 6
    BOOL        shift, şi mergi în starea 7
    DOUBLE      shift, şi mergi în starea 8
    CHAR        shift, şi mergi în starea 9
    VOID        shift, şi mergi în starea 10
    CONST       shift, şi mergi în starea 11
    STRING      shift, şi mergi în starea 12
    STRUCT      shift, şi mergi în starea 13
    START_MAIN  shift, şi mergi în starea 14

    global              mergi în starea 15
    structura           mergi în starea 16
    main                mergi în starea 17
    declaratie_g        mergi în starea 18
    declaratie_functie  mergi în starea 19
    asignare            mergi în starea 20
    asignare_structura  mergi în starea 21
    constant            mergi în starea 22
    tip                 mergi în starea 23


State 2

    0 $accept: start $end .

    $implicit  accept


State 3

  140 asignare: ID . '=' expresie
  142 asignare_structura: ID . '.' ID '=' expresie

    '='  shift, şi mergi în starea 24
    '.'  shift, şi mergi în starea 25


State 4

    8 global: EVAL . '(' parametru_eval ')' '{' bloc_eval '}'

    '('  shift, şi mergi în starea 26


State 5

  144 tip: INT .

    $implicit  reduce folosind regula 144 (tip)


State 6

  145 tip: FLOAT .

    $implicit  reduce folosind regula 145 (tip)


State 7

  146 tip: BOOL .

    $implicit  reduce folosind regula 146 (tip)


State 8

  147 tip: DOUBLE .

    $implicit  reduce folosind regula 147 (tip)


State 9

  148 tip: CHAR .

    $implicit  reduce folosind regula 148 (tip)


State 10

  149 tip: VOID .

    $implicit  reduce folosind regula 149 (tip)


State 11

  143 constant: CONST . tip
  144 tip: . INT
  145    | . FLOAT
  146    | . BOOL
  147    | . DOUBLE
  148    | . CHAR
  149    | . VOID
  150    | . STRING

    INT     shift, şi mergi în starea 5
    FLOAT   shift, şi mergi în starea 6
    BOOL    shift, şi mergi în starea 7
    DOUBLE  shift, şi mergi în starea 8
    CHAR    shift, şi mergi în starea 9
    VOID    shift, şi mergi în starea 10
    STRING  shift, şi mergi în starea 12

    tip  mergi în starea 27


State 12

  150 tip: STRING .

    $implicit  reduce folosind regula 150 (tip)


State 13

   11 structura: STRUCT . ID '{' bloc_structura '}'
  109 declaratie_g: STRUCT . ID ID

    ID  shift, şi mergi în starea 28


State 14

   57 main: START_MAIN . bloc_main END_MAIN
   58 bloc_main: . bloc_main cod_main
   59          | . %empty

    $implicit  reduce folosind regula 59 (bloc_main)

    bloc_main  mergi în starea 29


State 15

    1 start: start global .

    $implicit  reduce folosind regula 1 (start)


State 16

    7 global: structura .

    $implicit  reduce folosind regula 7 (global)


State 17

    2 start: start main .

    $implicit  reduce folosind regula 2 (start)


State 18

    4 global: declaratie_g . ';'

    ';'  shift, şi mergi în starea 30


State 19

    6 global: declaratie_functie .

    $implicit  reduce folosind regula 6 (global)


State 20

    5 global: asignare . ';'

    ';'  shift, şi mergi în starea 31


State 21

  141 asignare: asignare_structura .

    $implicit  reduce folosind regula 141 (asignare)


State 22

  110 declaratie_g: constant . ID '=' nr
  111             | constant . ID '=' ID
  112             | constant . ID '=' STRINGVAL
  113             | constant . ID '=' BOOLEAN

    ID  shift, şi mergi în starea 32


State 23

  103 declaratie_g: tip . ID '[' INTNR ']'
  104             | tip . ID
  105             | tip . ID '=' nr
  106             | tip . ID '=' ID
  107             | tip . ID '=' BOOLEAN
  108             | tip . ID '=' STRINGVAL
  125 declaratie_functie: tip . ID '(' params ')' '{' bloc_functie '}'
  126                   | tip . ID '(' ')' '{' bloc_functie '}'

    ID  shift, şi mergi în starea 33


State 24

   22 expresie_matematica: . expresie_matematica '+' expresie_matematica
   23                    | . expresie_matematica '-' expresie_matematica
   24                    | . expresie_matematica '*' expresie_matematica
   25                    | . expresie_matematica '/' expresie_matematica
   26                    | . '(' expresie_matematica ')'
   27                    | . nr
   28                    | . ID
   29 expresie_bool: . NOT ID
   30              | . BOOLEAN
   31              | . NOT BOOLEAN
   32              | . expresie AND expresie
   33              | . expresie OR expresie
   34              | . '(' expresie_bool ')'
   35              | . expresie GE expresie
   36              | . expresie LE expresie
   37              | . expresie EQ expresie
   38              | . expresie NE expresie
   39              | . expresie GT expresie
   40              | . expresie LT expresie
   41 expresie_string: . STRINGVAL '+' ID
   42                | . STRINGVAL '+' STRINGVAL
   43 expresie: . expresie_matematica
   44         | . expresie_bool
   45         | . expresie_string
  140 asignare: ID '=' . expresie
  151 nr: . INTNR
  152   | . FLOATNR
  153   | . DOUBLENR

    ID         shift, şi mergi în starea 34
    INTNR      shift, şi mergi în starea 35
    FLOATNR    shift, şi mergi în starea 36
    DOUBLENR   shift, şi mergi în starea 37
    BOOLEAN    shift, şi mergi în starea 38
    NOT        shift, şi mergi în starea 39
    STRINGVAL  shift, şi mergi în starea 40
    '('        shift, şi mergi în starea 41

    expresie_matematica  mergi în starea 42
    expresie_bool        mergi în starea 43
    expresie_string      mergi în starea 44
    expresie             mergi în starea 45
    nr                   mergi în starea 46


State 25

  142 asignare_structura: ID '.' . ID '=' expresie

    ID  shift, şi mergi în starea 47


State 26
